<resources>
    <string name="app_name">WorkTime</string>
    <string name="start_time">Start time</string>
    <string name="stop_time">Stop time</string>
    <string name="time_in">Time in</string>
    <string name="time_out">Time out</string>
    <string name="over_time">Over time</string>
    <string name="default_value1">--:--</string>
    <string name="default_value2">--</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>
    <string name="work_day">Work day: </string>
    <string name="title_activity_settings">Settings</string>

    <string name="setting">setting</string>
    <string name="showNotification">Show notification </string>
    <string name="closeApp">Close app on Reset </string>
    <string name="monday">Monday: </string>
    <string name="tuesday">Tuesday: </string>
    <string name="wednesday">Wednesday: </string>
    <string name="thursday">Thursday: </string>
    <string name="friday">Friday: </string>
    <string name="saturday">Saturday: </string>
    <string name="sunday">Sunday: </string>
    <string name="periodic_signal">Periodic signal: </string>
    <string name="pre_end_signal">Signal before stop time: </string>
    <string name="min">min</string>
    <string name="periodic_signal_description">(3 short vibrates)</string>
    <string name="ending_signal_description">(1 long vibrate)</string>
</resources>
