<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/setting_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/chb_show_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/showNotification"
            android:textColor="@color/colorText" />

        <CheckBox
            android:id="@+id/chb_close_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/closeApp"
            android:textColor="@color/colorText" />

        <LinearLayout
            android:id="@+id/ll_monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_monday_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/monday"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tv_monday_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/default_value1"
                android:textColor="@color/colorText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_tuesday_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tuesday"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tv_tuesday_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/default_value1"
                android:textColor="@color/colorText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_wednesday_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wednesday"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tv_wednesday_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/default_value1"
                android:textColor="@color/colorText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_thursday_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thursday"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tv_thursday_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/default_value1"
                android:textColor="@color/colorText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_friday_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/friday"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tv_friday_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/default_value1"
                android:textColor="@color/colorText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_saturday_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/saturday"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tv_saturday_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/default_value1"
                android:textColor="@color/colorText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_sunday_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sunday"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tv_sunday_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/default_value1"
                android:textColor="@color/colorText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_periodic_signal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_periodic_signal_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/periodic_signal"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tv_periodic_signal_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/default_value2"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tv_periodic_signal_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/min"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tv_periodic_signal_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/periodic_signal_description"
                android:textColor="@color/colorText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_pre_end_signal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_pre_end_signal_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pre_end_signal"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tv_pre_end_signal_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/default_value2"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tv_pre_end_signal_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/min"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tv_pre_end_signal_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/ending_signal_description"
                android:textColor="@color/colorText" />
        </LinearLayout>
    </LinearLayout>
</layout>