<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewmodel"
            type="com.compassplus.worktime.viewmodel.WorkTimeViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tv_day_continious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/work_day"
            android:textSize="16sp"
            android:textColor="@color/colorText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_day_continious_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:onClick="changeWorkDay"
            android:text="@string/default_value"
            android:textSize="16sp"
            android:textColor="@color/colorText"
            app:layout_constraintStart_toEndOf="@+id/tv_day_continious"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:onClick="resetTimer"
            android:text="@string/reset"
            android:textSize="16sp"
            android:textColor="@color/colorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/start_time"
            android:textSize="18sp"
            android:textColor="@color/colorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_day_continious" />

        <TextView
            android:id="@+id/tv_start_time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:text='@{viewmodel.startTimeText}'
            android:textColor="@color/colorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_start_time" />

        <TextView
            android:id="@+id/tv_working_time"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp"
            android:textColor="@color/colorTextGreen"
            android:text="@string/time_in"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_time_out"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_start_time_value" />

        <TextView
            android:id="@+id/tv_working_time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorTextGreen"
            android:textSize="24sp"
            android:text='@{viewmodel.workingTimeText}'
            app:layout_constraintEnd_toEndOf="@+id/tv_working_time"
            app:layout_constraintStart_toStartOf="@+id/tv_working_time"
            app:layout_constraintTop_toBottomOf="@+id/tv_working_time" />

        <TextView
            android:id="@+id/tv_time_out"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/time_out"
            android:textSize="18sp"
            android:textColor="@color/colorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_working_time"
            app:layout_constraintTop_toBottomOf="@+id/tv_start_time_value" />

        <TextView
            android:id="@+id/tv_time_out_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textColor="@color/colorText"
            android:text='@{viewmodel.timeOutText}'
            app:layout_constraintBottom_toBottomOf="@+id/tv_working_time_value"
            app:layout_constraintEnd_toEndOf="@+id/tv_time_out"
            app:layout_constraintStart_toStartOf="@+id/tv_time_out"
            app:layout_constraintTop_toTopOf="@+id/tv_working_time_value" />

        <TextView
            android:id="@+id/tv_stop_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/stop_time"
            android:textSize="18sp"
            android:textColor="@color/colorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_working_time_value" />

        <TextView
            android:id="@+id/tv_stop_time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textColor="@color/colorText"
            android:text='@{viewmodel.stopTimeText}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_stop_time" />


        <TextView
            android:id="@+id/tv_over_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/over_time"
            android:textColor="@color/colorTextRed"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_stop_time_value" />

        <TextView
            android:id="@+id/tv_over_time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorTextRed"
            android:textSize="18sp"
            android:text='@{viewmodel.overTimeText}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_over_time" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:onClick="onClickButton"
            android:text="@string/start"
            android:background="@color/colorButton"
            android:textColor="@color/colorText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>
</layout>